# C_LAB

./: CMakeLists.txt  README.md
lab01/: README.md  practice_2.c  practice_3.c  practice_4.c
lab02/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c  practice_5.c
lab03/: README.md  practice_0.c  practice_1.c  practice_2.c  practice_3.c  practice_4.c  practice_5.c  practice_5_1.c
lab04/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c  practice_4_1.c  practice_5.c
lab05/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c
lab06/: README.md  practice_1.c  practice_2.c  practice_2_1.c  practice_3.c
lab07/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c
lab08/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c
lab10/: README.md  practice_1.c  practice_2.c  practice_3.c
lab11/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c
lab12/: README.md  main.c  practice_2.c  stock.c
lab13/: README.md  practice_1.c  practice_2.c  practice_3.c
lab14/: README.md  practice_1.c  practice_2.c  practice_3.c  practice_4.c
lab15/: README.md  practice_4.c
