cmake_minimum_required(VERSION 3.29)
project(C_LAB C)

set(CMAKE_C_STANDARD 11)

add_executable(C_LAB lab01/practice_1.c
        lab01/practice_2.c
        lab01/practice_3.c
        lab01/practice_4.c
        lab02/practice_1.c
        lab02/practice_2.c
        lab02/practice_3.c
        lab02/practice_4.c
        lab02/practice_5.c
        lab03/practice_1.c
        lab03/practice_0.c
        lab03/practice_2.c
        lab03/practice_3.c
        lab03/practice_4.c
        lab03/practice_5.c
        lab03/practice_5_1.c
        lab04/practice_1.c
        lab04/practice_2.c
        lab04/practice_3.c
        lab04/practice_4.c
        lab04/practice_4_1.c
        lab04/practice_5.c)
