cmake_minimum_required(VERSION 3.29)
project(C_LAB C)

set(CMAKE_C_STANDARD 11)

add_executable(C_LAB lab01/practice_1.c
        lab01/practice_2.c
        lab01/practice_3.c
        lab01/practice_4.c
        lab02/practice_1.c
        lab02/practice_2.c
        lab02/practice_3.c
        lab02/practice_4.c
        lab02/practice_5.c
        lab03/practice_1.c
        lab03/practice_0.c
        lab03/practice_2.c
        lab03/practice_3.c
        lab03/practice_4.c
        lab03/practice_5.c
        lab03/practice_5_1.c
        lab04/practice_1.c
        lab04/practice_2.c
        lab04/practice_3.c
        lab04/practice_4.c
        lab04/practice_4_1.c
        lab04/practice_5.c
        lab05/practice_1.c
        lab05/practice_2.c
        lab05/practice_3.c
        lab05/practice_4.c
        lab06/practice_1.c
        lab06/practice_3.c
        lab06/practice_4.c
        lab06/practice_2.c
        lab06/practice_2_1.c
        lab07/practice_1.c
        lab07/practice_2.c
        lab07/practice_3.c
        lab07/practice_4.c
        lab08/practice_1.c
        lab08/practice_2.c
        lab08/practice_3.c
        lab08/practice_4.c
        lab10/practice_1.c
        lab10/practice_2.c
        lab10/practice_3.c
        lab11/practice_1.c
        lab11/practice_3.c
        lab11/practice_2.c
        lab11/practice_4.c
        lab12/practice_2.c
        lab12/practice_1.c
        lab13/practice_1.c
        lab13/practice_2.c
        lab13/practice_3.c
        lab13/practice_4.c
)
